--- a/pow.conf
+++ b/pow.conf
@@ -2,6 +2,6 @@
     "data_context_id": "http://openworm.org/data",
     "imports_context_id": "http://openworm.org/data/imports",
     "rdf.source": "sqlite",
-    "rdf.store_conf": "worm.db",
+    "rdf.store_conf": "$HERE/worm.db",
     "rdf.upload_block_statement_count": 50
 }
